# car-rental-website

./: .dockerignore  .env.example  .flake8  .gitignore  CHANGES.md  DOCKER.md  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  migrate_database.py  pyproject.toml  requirements.txt  setup-wsl.sh
public/: admin.html  car-detail.html  cars.html  chat-widget.js  index.html  last-trip-detail.html  last-trips.html  login.html  nav-loader.js  nav-styles.css  nav-user.js  nav.html  register.html  spot-detail.html  spots.html
src/: __init__.py  db.py  db_ops.py  schemas.py  utils.py
src/api/: __init__.py  admin.py  cars.py  chat.py  last_trips.py  spots.py  users.py
