[tool.poetry]
name = "car-rental-website"
version = "1.0.0"
description = "A car rental and picnic destination website with FastAPI backend"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.127.0"
uvicorn = "^0.40.0"
pydantic = "^2.12.5"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.21"
bcrypt = "^5.0.0"
passlib = "^1.7.4"
email-validator = "^2.3.0"
openai = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 5000 --reload"
prod = "uvicorn main:app --host 0.0.0.0 --port 5000"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
